adds some more play-around

--- a/projects/calprotectin/exp/exp002_fit_classifiers.ipynb
+++ b/projects/calprotectin/exp/exp002_fit_classifiers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "id": "6359bf59",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "id": "13624dea",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "id": "e32de782",
    "metadata": {},
    "outputs": [
@@ -47,19 +47,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.3135593220338983\n"
+      "0.3135593220338983\n",
+      "111\n"
      ]
     }
    ],
    "source": [
     "total_y = len(train_df) + len(val_df) + len(test_df)\n",
     "positives = train_df['diagnosis_infection'].sum() + val_df['diagnosis_infection'].sum() + test_df['diagnosis_infection'].sum()\n",
-    "print(positives/total_y)"
+    "print(positives/total_y)\n",
+    "print(positives)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "id": "15b03f7f",
    "metadata": {},
    "outputs": [],
@@ -82,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "id": "0e4cd8fe",
    "metadata": {},
    "outputs": [],
@@ -101,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "id": "ce4cd82f",
    "metadata": {},
    "outputs": [
@@ -137,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "id": "4862d9c0",
    "metadata": {},
    "outputs": [
@@ -182,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "id": "031e66f2",
    "metadata": {},
    "outputs": [
@@ -212,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "id": "4a384ebd",
    "metadata": {},
    "outputs": [
